tests/neg/noimports2.scala
//> using options -Yno-imports
object Test {
  assert("asdf" == "asdf") // error: not found assert
}
